--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,93 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: Welcome to 21st
+description: Visually work on your frontend. Get AI-powered product solutions.
 ---
 
-## Setting up
+21st is a visual frontend development tool. Work on your repository in a canvas where each frame is a branch, see changes visually, and get AI-powered product solutions for your features.
 
-Get your documentation site up and running in minutes.
+## Two Ways to Work
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+**Visual Frontend Work** — Work on your repository in a canvas where each frame is a branch. See your changes visually, iterate quickly, and compare approaches side by side.
 
-## Make it yours
+**AI Product Solutions** — Use Plan mode to explore multiple implementation approaches. The AI researches components from 21st.dev and your favorite apps, studies your codebase, asks clarifying questions, then creates several plans with different variations. When you approve, each plan becomes a working branch you can compare and refine.
 
-Design a docs site that looks great and empowers your users.
+## How It Works
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+1. **Connect Your Repository** — Link your GitHub repository. 21st scans your components, design system, and patterns to understand your codebase.
+
+2. **Choose Your Mode** — Use Iterate mode for direct code editing, or Plan mode to explore multiple implementation approaches with AI research.
+
+3. **Work Visually** — See your changes in real-time, compare multiple approaches side by side, and iterate quickly in the canvas.
+
+4. **Get Your Code** — Create a PR for connected repos, or download/copy code for blank frames. 21st never commits directly — you control when changes are integrated.
+
+## Choose Your Path
+
+<CardGroup cols={3}>
+  <Card title="Build with Canvas" icon="wand-magic-sparkles" href="/canvas">
+    AI-powered UI building tool with GitHub and Cursor integrations. Create beautiful interfaces with intelligent assistance.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Use Community Components" icon="users" href="/community">
+    Browse and install thousands of high-quality React components created by developers worldwide.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+  <Card title="Publish Components" icon="rocket" href="/publishing/quick-start">
+    Share your components with the community and earn from their usage through our monetization system.
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+</CardGroup>
 
-## Create beautiful pages
+## Quick Links
 
-Everything you need to create world-class documentation.
+### Canvas
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+<CardGroup cols={2}>
+  <Card title="Quick Start" icon="rocket" href="/canvas/quick-start">
+    Get started with Canvas in minutes
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
+  <Card title="Chat Modes & Commands" icon="comments" href="/canvas/ai-chat">
+    Iterate vs Plan mode, inline @commands
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
+  <Card title="Iterate Mode" icon="code" href="/canvas/iterate-mode">
+    Full-featured coding agent with standard tools
   </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
+  <Card title="Plan Mode" icon="list-check" href="/canvas/plan-mode">
+    Get multiple implementation approaches with AI research
   </Card>
-</Columns>
+  <Card title="Context Management" icon="layer-group" href="/canvas/context-management">
+    Add on-canvas items, images, and @Codebase
+  </Card>
+  <Card title="Version History" icon="clock-rotate-left" href="/canvas/versions">
+    Versions dialog and restore checkpoints
+  </Card>
+  <Card title="GitHub Integration Setup" icon="github" href="/canvas/github-integration">
+    Enable, authorize, index your repo
+  </Card>
+</CardGroup>
 
-## Need inspiration?
+### Publishing
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<CardGroup cols={2}>
+  <Card title="Publish Your First Component" icon="upload" href="/publishing/quick-start">
+    Share your components and earn
+  </Card>
+  <Card title="Quality Guidelines" icon="check-double" href="/publishing/quality-guidelines">
+    Follow best practices for publishing
+  </Card>
+  <Card title="Component Structure" icon="folder-tree" href="/publishing/component-structure">
+    Recommended file layout
+  </Card>
+</CardGroup>
+
+### Community
+
+<CardGroup cols={1}>
+  <Card title="Community" icon="globe" href="/community">
+    Explore the 21st community
+  </Card>
+</CardGroup>
+
+## Need Help?
+
+- Join our [Discord community](https://discord.gg/Qx4rFunHfm)
+- Follow us on [X/Twitter](https://x.com/21st_dev)
+- Check out our [GitHub](https://github.com/serafimcloud/21st)
+- Email support: support@21st.dev
