--- a/community/index.mdx
+++ b/community/index.mdx
@@ -1,22 +1,64 @@
 ---
 title: Community
-description: Browse, install, and use components from the 21st community
+description: Discover and use open-source React components from developers worldwide
 ---
 
-<Info>
-Community docs are being rewritten. Check back soon.
-</Info>
+The 21st Community is where developers share high-quality React and Tailwind CSS components. All components are **open-source with MIT license** — use them freely in any project.
 
-## Explore Components
+## What You'll Find
 
-Visit [21st](https://21st.dev) to browse thousands of community-created React components.
+**Components** — Buttons, cards, forms, heroes, and hundreds more. Many built on [shadcn/ui](https://ui.shadcn.com), all production-ready.
+
+**Screens** — Real app UI screenshots from companies like Stripe, Linear, and Notion. Great for inspiration and reference.
+
+**Themes** — Color palettes and typography extracted from beautiful websites. Apply them to your projects instantly.
+
+## Get Started
 
 <CardGroup cols={2}>
-  <Card title="Browse Components" icon="grid-2" href="https://21st.dev">
-    Explore the full component library
+  <Card title="Browse Components" icon="puzzle-piece" href="/community/components">
+    Find and copy components for your project
   </Card>
-  <Card title="Publish Your Own" icon="upload" href="/publishing/quick-start">
-    Share your components with the community
+  <Card title="Explore Screens" icon="image" href="/community/screens">
+    Get inspired by real app designs
+  </Card>
+  <Card title="Discover Themes" icon="palette" href="/community/themes">
+    Copy color schemes and typography
+  </Card>
+  <Card title="Keyboard Shortcuts" icon="keyboard" href="/community/keyboard-shortcuts">
+    Navigate faster with hotkeys
   </Card>
 </CardGroup>
 
+## Quick Search
+
+Press `⌘K` (Mac) or `Ctrl+K` (Windows) anywhere to open the command menu. Search components by name, browse categories, or jump to screens and themes.
+
+<Tip>
+**Bookmark your favorites** — Press `B` on any component or screen to save it. Access your bookmarks from the sidebar.
+</Tip>
+
+## Using Components
+
+Every component can be used in three ways:
+
+1. **Copy Code** — Press `⌘C` to copy the full component code
+2. **Copy AI Prompt** — Press `⌘X` to copy a prompt for [Magic MCP](/canvas/ai-chat) or other AI tools
+3. **Install via CLI** — Use shadcn CLI for direct installation:
+
+```bash
+npx shadcn@latest add "https://21st.dev/r/author/component-name"
+```
+
+## Top Authors
+
+The community features components from the best open-source creators. Visit author profiles to see all their published work and follow your favorites.
+
+<CardGroup cols={2}>
+  <Card title="Publish Your Own" icon="upload" href="/publishing/quick-start">
+    Share your components with the community
+  </Card>
+  <Card title="Quality Guidelines" icon="check" href="/publishing/quality-guidelines">
+    What makes a great component
+  </Card>
+</CardGroup>
