--- a/comparisons.mdx
+++ b/comparisons.mdx
@@ -22,7 +22,7 @@ Understanding how 21st differs from other design and development tools.
 | **Community & Library** | Limited | Active builders + curated components + website screens |
 | **Local Context** | None | GitHub integration with your codebase |
 | **Deployment** | Manual export | Create PRs or copy patches |
-| **Focus** | Generic generation | Visual frontend work + AI product solutions |
+| **Focus** | Generic generation | Visual frontend work + product design |
 
 ## vs Inspiration Galleries
 
@@ -36,7 +36,7 @@ Understanding how 21st differs from other design and development tools.
 
 ## Why Choose 21st?
 
-21st is the ideal tool for **visual frontend work** and **AI-powered product solutions** — work visually where each frame is a branch, and get multiple implementation approaches with AI research.
+21st is the ideal tool for **visual frontend work** and **product design** — work visually where each frame is a branch, and get multiple implementation approaches with AI research.
 
 <CardGroup cols={2}>
   <Card title="Start Building" icon="hammer" href="/canvas">
