--- a/index.mdx
+++ b/index.mdx
@@ -1,15 +1,15 @@
 ---
 title: Welcome to 21st
-description: Visually work on your frontend. Get AI-powered product solutions.
+description: Visually work on your frontend. Get AI-powered product design.
 ---
 
-21st is a visual frontend development tool. Work on your repository in a canvas where each frame is a branch, see changes visually, and get AI-powered product solutions for your features.
+21st is a visual frontend development tool. Work on your repository in a canvas where each frame is a branch, see changes visually, and get AI-powered product design for your features.
 
 ## Two Ways to Work
 
 **Visual Frontend Work** — Work on your repository in a canvas where each frame is a branch. See your changes visually, iterate quickly, and compare approaches side by side.
 
-**AI Product Solutions** — Use Plan mode to explore multiple implementation approaches. The AI researches components from 21st.dev and your favorite apps, studies your codebase, asks clarifying questions, then creates several plans with different variations. When you approve, each plan becomes a working branch you can compare and refine.
+**Product Design** — Use Plan mode to explore multiple implementation approaches. The AI researches components from 21st.dev and your favorite apps, studies your codebase, asks clarifying questions, then creates several plans with different variations. When you approve, each plan becomes a working branch you can compare and refine.
 
 ## How It Works
 
