--- a/canvas/ai-chat.mdx
+++ b/canvas/ai-chat.mdx
@@ -23,10 +23,9 @@ This is useful when you want to:
 
 ### What is a Variant?
 
-A variant is a frame on your canvas. What it represents depends on your setup:
-
-- **Connected repository**: A variant is a branch in your real project with a live preview of your actual codebase
-- **Blank frames**: A variant is an empty project for iterating on ideas and exploring concepts
+A variant is a frame on your canvas. For a full explanation of how variants map
+to branches in connected repositories vs blank frames, see the
+[Canvas overview](/canvas).
 
 Each variant can have multiple chats, and duplicating (forking) a variant keeps all chat histories in the copy.
 
