--- a/canvas/github-integration.mdx
+++ b/canvas/github-integration.mdx
@@ -117,16 +117,14 @@ The key is that non-technical team members can contribute through PRs, while eng
 
 ## Getting Your Code
 
-When working with a connected repository, branches are local by default. They're only published to GitHub when you open a PR:
-
-- **Open a Pull Request** — Select the branch you want to publish, then create a PR. Only the selected branch will be pushed to GitHub and become available for review
-- **Copy Git Patch** — Get a patch file that you can apply to your local repository using `git apply`
-
-<Tip>
-You can work on multiple branches locally, iterate on different approaches, and only publish the one you want to share. The selected branch is the one that will be published when you create a PR.
-</Tip>
+When working with a connected repository, branches are local by default and only
+published to GitHub when you open a PR. For a full overview of how to get your
+code (PRs, Git patches, downloads for empty projects), see
+[Getting Your Code](/canvas/getting-code).
 
 <Warning>
-21st never commits directly to your repository. Branches stay local until you explicitly open a PR. You always control when changes are published and integrated.
+21st never commits directly to your repository. Branches stay local until you
+explicitly open a PR — you always control when changes are published and
+integrated.
 </Warning>
 
