--- a/canvas/iterate-mode.mdx
+++ b/canvas/iterate-mode.mdx
@@ -60,12 +60,10 @@ Iterate mode is perfect for tasks you'd normally do in Cursor or Claude Code. Fo
 
 ## Working with Variants
 
-Each variant (frame) can have multiple chats in Iterate mode. Click the **+** button in the chat header to create a new chat for the same variant:
-
-- **Multiple chats** — Create separate conversations for different aspects of the same feature
-- **Chat history** — View and switch between all chats for a variant in the chat history panel
-- **Isolated contexts** — Each chat maintains its own conversation context
-- **Forking** — Duplicate a variant to keep all chat histories when exploring alternatives
+Each variant (frame) can have multiple chats in Iterate mode, with separate
+contexts per conversation. For details on how chats relate to variants and how
+to manage multiple chats, see
+[Chat Modes & Commands](/canvas/ai-chat).
 
 ## Best Practices
 
