--- a/canvas/quick-start.mdx
+++ b/canvas/quick-start.mdx
@@ -27,8 +27,8 @@ Start with empty projects to explore ideas and prototype features before integra
   <Step title="Connect Your Repository (Optional)">
     If working with an existing project: - Go to **Team Settings →
     Integrations** - Enable GitHub and select your repository - Wait for
-    indexing to complete See the [GitHub Integration
-    guide](/canvas/github-integration) for details.
+    indexing to complete. See the full
+    [GitHub Integration guide](/canvas/github-integration) for details.
   </Step>
   <Step title="Create Your First Variant">
     - Click **New Variant** or press `N` to create a new frame - If connected:
@@ -36,9 +36,11 @@ Start with empty projects to explore ideas and prototype features before integra
     project to work in
   </Step>
   <Step title="Choose Your Mode">
-    Select how you want to work: - **Iterate mode** (default): Direct code
-    editing for quick fixes and changes - **Plan mode**: Get multiple
-    implementation approaches with AI research
+    Select how you want to work: - **Iterate mode** (default): direct code
+    editing for quick fixes and changes - **Plan mode**: exploring multiple
+    implementation approaches with AI research. For a complete overview of
+    chat modes and commands, see
+    [Chat Modes & Commands](/canvas/ai-chat).
   </Step>
   <Step title="Start Building">
     Describe what you need in the chat: - "Add a user profile page" - "Fix the
@@ -46,34 +48,21 @@ Start with empty projects to explore ideas and prototype features before integra
     The AI will help you build it.
   </Step>
   <Step title="Get Your Code">
-    When ready to integrate: - **Connected repo**: Create a PR or copy a Git
-    patch - **Blank frames**: Download the project or copy code files
+    When ready to integrate your work back into your project, follow the
+    [Getting Your Code](/canvas/getting-code) guide. It explains how to work
+    with PRs, Git patches, and downloads for both connected repositories and
+    blank frames.
   </Step>
 </Steps>
 
 ## Which Mode Should I Use?
 
-### Use Iterate Mode When:
+Use **Iterate mode** for direct edits and quick changes, and **Plan mode** when
+you want to explore different implementation options and compare approaches.
+For detailed explanations of each mode and example workflows, see:
 
-- You know what you want to build
-- Making quick fixes or updates
-- Refactoring existing code
-- Adding features to existing components
-
-<Card title="Learn More" icon="code" href="/canvas/iterate-mode">
-  Full guide to Iterate mode
-</Card>
-
-### Use Plan Mode When:
-
-- You want to explore different approaches
-- Need to compare UX patterns
-- Want AI to research how others solve similar problems
-- Creating multiple variations to test
-
-<Card title="Learn More" icon="list-check" href="/canvas/plan-mode">
-  Full guide to Plan mode
-</Card>
+- [Iterate Mode](/canvas/iterate-mode)
+- [Plan Mode](/canvas/plan-mode)
 
 ## Essential Tips
 
