--- a/community/components.mdx
+++ b/community/components.mdx
@@ -102,18 +102,7 @@ Press `⌘⇧C` to copy the component link. Share it with your team or save it f
 
 ## Keyboard Shortcuts
 
-| Action | Shortcut |
-|--------|----------|
-| Copy code | `⌘/Ctrl` + `C` |
-| Copy AI prompt | `⌘/Ctrl` + `X` |
-| Copy share link | `⌘/Ctrl` + `Shift` + `C` |
-| Bookmark | `B` |
-| Toggle fullscreen | `F` |
-| Toggle code view | `C` |
-| Reload preview | `R` |
-| Navigate (in dialog) | `←` `→` |
-| Open component page | `Enter` |
-| Close dialog | `Escape` |
+For a complete list of shortcuts when working with components, see:
 
 <Card title="All Shortcuts" icon="keyboard" href="/community/keyboard-shortcuts">
   Complete keyboard reference
