--- a/community/index.mdx
+++ b/community/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Community
+title: Overview
 description: Discover and use open-source React components from developers worldwide
 ---
 
@@ -7,11 +7,13 @@ The 21st Community is where developers share high-quality React and Tailwind CSS
 
 ## What You'll Find
 
-**Components** — Buttons, cards, forms, heroes, and hundreds more. Many built on [shadcn/ui](https://ui.shadcn.com), all production-ready.
+**Components** — Production-ready React/Tailwind building blocks for interfaces.
 
-**Screens** — Real app UI screenshots from companies like Stripe, Linear, and Notion. Great for inspiration and reference.
+**Screens** — Real app UI screenshots from companies like Stripe, Linear, and
+Notion for inspiration and reference.
 
-**Themes** — Color palettes and typography extracted from beautiful websites. Apply them to your projects instantly.
+**Themes** — Color palettes and typography extracted from beautiful websites
+that you can apply to your projects instantly.
 
 ## Get Started
 
