--- a/community/screens.mdx
+++ b/community/screens.mdx
@@ -83,19 +83,8 @@ Press `B` on any screen or app to bookmark it. Access all saved screens from **B
 
 ## Keyboard Shortcuts
 
-| Action | Shortcut |
-|--------|----------|
-| Switch tabs | `Tab` |
-| Bookmark | `B` |
-| Navigate | `←` `→` |
-| Add to Canvas | `Enter` |
-| Close preview | `Escape` |
+For a complete list of shortcuts for browsing screens and components, see:
 
-<CardGroup cols={2}>
-  <Card title="Components" icon="puzzle-piece" href="/community/components">
-    Browse React components
-  </Card>
-  <Card title="Themes" icon="palette" href="/community/themes">
-    Copy color schemes
-  </Card>
-</CardGroup>
+<Card title="Keyboard Shortcuts" icon="keyboard" href="/community/keyboard-shortcuts">
+  Community keyboard reference
+</Card>
