--- a/comparisons.mdx
+++ b/comparisons.mdx
@@ -36,7 +36,10 @@ Understanding how 21st differs from other design and development tools.
 
 ## Why Choose 21st?
 
-21st is the ideal tool for **visual frontend work** and **product design** — work visually where each frame is a branch, and get multiple implementation approaches with AI research.
+21st is built for **visual frontend work** and **product design**. Work visually
+with frames-as-branches and compare multiple implementation approaches side by
+side. For a full overview of how this works in practice, see the
+[Welcome page](/).
 
 <CardGroup cols={2}>
   <Card title="Start Building" icon="hammer" href="/canvas">
