--- a/publishing/quick-start.mdx
+++ b/publishing/quick-start.mdx
@@ -19,15 +19,17 @@ description: Publish your first component in minutes
 - Name, short description
 - Tags
 - Upload **Cover image** (required) and **Video** (optional) in Studio
+  (recommended)
 
 ## Publish
 
 <Steps>
   <Step title="Submit for review">
-    Click **Publish** to submit for review
+    Click **Publish** to submit your component for review.
   </Step>
   <Step title="Status flow">
-    Your component goes through these stages:
+    Your component goes through these stages (подробности см. в
+    [Quality Guidelines](/publishing/quality-guidelines)):
     - `on_review` — awaiting review
     - `posted` — approved, available via direct link (not listed)
     - `featured` — promoted and visible in public listings
