--- a/canvas/index.mdx
+++ b/canvas/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Canvas
+title: Overview
 description: Visual frontend work where each frame is a branch
 ---
 
@@ -20,7 +20,8 @@ Since 21st runs your real application, you can **share preview links** with coll
 If you're working with blank frames (empty projects), each variant is a **separate empty project** for iterating on ideas. Perfect for exploring concepts, prototyping features, or experimenting before integrating into your main codebase.
 
 <Warning>
-21st doesn't commit directly to your code. You control when and how changes are integrated.
+  21st doesn't commit directly to your code. You control when and how changes
+  are integrated.
 </Warning>
 
 ## Getting Started
@@ -38,42 +39,42 @@ If you're working with blank frames (empty projects), each variant is a **separa
   <Card title="Plan Mode" icon="list-check" href="/canvas/plan-mode">
     Get multiple implementation approaches with AI research
   </Card>
-  <Card title="Context Management" icon="layer-group" href="/canvas/context-management">
+  <Card
+    title="Context Management"
+    icon="layer-group"
+    href="/canvas/context-management"
+  >
     Add on-canvas items, images, and @Codebase
   </Card>
-  <Card title="Version History" icon="clock-rotate-left" href="/canvas/versions">
+  <Card
+    title="Version History"
+    icon="clock-rotate-left"
+    href="/canvas/versions"
+  >
     Versions dialog and restore checkpoints
   </Card>
-  <Card title="GitHub Integration" icon="github" href="/canvas/github-integration">
+  <Card
+    title="GitHub Integration"
+    icon="github"
+    href="/canvas/github-integration"
+  >
     Enable, authorize, index your repo
   </Card>
   <Card title="Design Mode" icon="palette" href="/canvas/design-mode">
     Visual no-code editor for styling
   </Card>
-  <Card title="Keyboard Shortcuts" icon="keyboard" href="/canvas/keyboard-shortcuts">
+  <Card
+    title="Keyboard Shortcuts"
+    icon="keyboard"
+    href="/canvas/keyboard-shortcuts"
+  >
     Complete shortcuts reference
   </Card>
 </CardGroup>
 
 ## Getting Your Code
 
-21st doesn't commit directly to your repository. How you get your code depends on your setup:
-
-### Working with a Connected Repository
-
-If you're working with an existing project (connected GitHub repository):
-
-- **Open a Pull Request** — Select the branch you want to publish, then create a PR. Only the selected branch will be pushed to GitHub
-- **Copy Git Patch** — Get a patch file you can apply to your local repository
-
-### Working with Empty Frames
-
-If you're working with empty frames (branches in an empty project):
-
-- **Download All Code** — Download the complete project as a ZIP file
-- **Copy Code** — Copy individual files or components directly from the editor
-
-<Tip>
-For connected repos, use PRs for team collaboration. For empty frames, download or copy code to integrate into your project manually.
-</Tip>
-
+21st doesn't commit directly to your repository. How you get your code depends
+on whether you're working with a connected repo or empty frames. For a complete
+guide and export options, see
+[Getting Your Code](/canvas/getting-code).
